Added more entries. Small additions and changes to the Swedish
2003-05-20  Christian Rose  <menthos@menthos.com>

	* .cvsignore: Added more entries.
	* sv.po: Small additions and changes to the Swedish
	translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2003-05-20  Christian Rose  <menthos@menthos.com>
+
+	* .cvsignore: Added more entries.
+	* sv.po: Small additions and changes to the Swedish
+	translation.
+
 2003-05-19  Richard Hult  <richard@imendo.com>
 
 	* cy.po: Added Welsh translation from Alan Cox.
