Added "bg" "cy" "ja" "pt_BR" "sr" "zh_CN" to ALL_LINGUAS.
2003-05-20  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "bg" "cy" "ja" "pt_BR" "sr" "zh_CN" to ALL_LINGUAS.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-20  Abel Cheung  <maddog@linux.org.hk>
+
+	* configure.in: Added "bg" "cy" "ja" "pt_BR" "sr" "zh_CN" to ALL_LINGUAS.
+
 2003-04-17  Richard Hult  <richard@imendo.com>
 
 	* Release 0.16.
