Updated traditional Chinese translation. Fix header (msgfmt check failed).
	* zh_TW.po: Updated traditional Chinese translation.
	* es.po, ko.po, sr.po, zh_CN.po: Fix header (msgfmt check failed).
	* bg.po: Converted to UTF-8.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2003-05-20  Abel Cheung  <maddog@linux.org.hk>
+
+	* zh_TW.po: Updated traditional Chinese translation.
+	* es.po, ko.po, sr.po, zh_CN.po: Fix header (msgfmt check failed).
+	* bg.po: Converted to UTF-8.
+
 2003-05-20  Christian Rose  <menthos@menthos.com>
 
 	* .cvsignore: Added more entries.
