--- a/po/sr.po
+++ b/po/sr.po
@@ -3,13 +3,13 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # Bosko Andjelkovic <b.andjelkovic@planet.nl>, 2003
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: DrWright 0.16\n"
 "POT-Creation-Date: 2003-04-17 18:56+0100\n"
 "PO-Revision-Date: 2003-05-04 13:49+0100\n"
 "Last-Translator: Boško Andjelkovič <b.andjelkovic@planet.nl>\n"
+"Language-Team: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
