--- a/po/es.po
+++ b/po/es.po
@@ -7,6 +7,7 @@ msgstr ""
 "POT-Creation-Date: 2003-05-19 23:49+0200\n"
 "PO-Revision-Date: 2003-01-22 20:25-0300\n"
 "Last-Translator: Nicols Lichtmaier <nick@technisys.com.ar>\n"
+"Language-Team: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
