--- a/po/ko.po
+++ b/po/ko.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: drwright\n"
 "POT-Creation-Date: 2003-05-19 23:49+0200\n"
 "PO-Revision-Date: 2003-03-08 13:18+0900\n"
 "Last-Translator: Kang Jeong-Hee <Keizi@mail.co.kr>\n"
