--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,6 +8,7 @@ msgstr ""
 "POT-Creation-Date: 2003-04-17 18:56+0200\n"
 "PO-Revision-Date: 2003-05-09 16:10+0800\n"
 "Last-Translator: Xiping Wang<xpwang@21cn.com>\n"
+"Language-Team: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
