Add Czech translation Add cs to ALL_LINGUAS in configure.in

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-21  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Added Czech translation.
+
 2003-05-20  Abel Cheung  <maddog@linux.org.hk>
 
 	* zh_TW.po: Updated traditional Chinese translation.
