--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-21  Miloslav Trmac  <mitr@volny.cz>
+
+	* configure.in: Added "cs" to ALL_LINGUAS.
+
 2003-05-20  Abel Cheung  <maddog@linux.org.hk>
 
 	* configure.in: Added "bg" "cy" "ja" "pt_BR" "sr" "zh_CN" to ALL_LINGUAS.
