--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-24  Duarte Loreto <happyguy_pt@hotmail.com>
+
+        * pt.po: Added Portuguese translation.
+
 2003-05-21  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Added Czech translation.
