--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-24  Duarte Loreto <happyguy_pt@hotmail.com>
+
+        * configure.in: Added Portuguese (pt) to ALL_LINGUAS.
+
 2003-05-21  Miloslav Trmac  <mitr@volny.cz>
 
 	* configure.in: Added "cs" to ALL_LINGUAS.
