--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-25  Richard Hult  <rhult@codefactory.se>
+
+	* POTFILES.skip: Remove disclosure widget.
+	* sv.po: Update.
+
 2003-05-24  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Added Portuguese translation.
@@ -18,7 +23,7 @@
 	* sv.po: Small additions and changes to the Swedish
 	translation.
 
-2003-05-19  Richard Hult  <richard@imendo.com>
+2003-05-19  Richard Hult  <rhult@codefactory.se>
 
 	* cy.po: Added Welsh translation from Alan Cox.
 
