--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-27  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2003-05-25  Richard Hult  <rhult@codefactory.se>
 
 	* POTFILES.skip: Remove disclosure widget.
