--- a/po/nl.po
+++ b/po/nl.po
@@ -6,80 +6,13 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: DrWright 0.13\n"
-"POT-Creation-Date: 2003-05-19 23:49+0200\n"
-"PO-Revision-Date: 2002-11-22 17:08+0100\n"
+"POT-Creation-Date: 2003-04-17 18:56+0200\n"
+"PO-Revision-Date: 2003-05-29 17:08+0100\n"
 "Last-Translator: Luc Roobrouck <luc.roobrouck@pandora.be>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: data/glade/drw-preferences.glade.h:1
-msgid "*"
-msgstr ""
-
-#: data/glade/drw-preferences.glade.h:2
-msgid "<b>W_arning time:</b>"
-msgstr "<b>W_aarschuw tijd:</b>"
-
-#: data/glade/drw-preferences.glade.h:3
-msgid "<b>Warning _method:</b>"
-msgstr "<b>Waarschuw _methode:</b>"
-
-#: data/glade/drw-preferences.glade.h:4
-msgid "<b>_Break interval:</b>"
-msgstr "<b>_Pauze interval:</b>"
-
-#: data/glade/drw-preferences.glade.h:5
-#, fuzzy
-msgid "<b>_Unlocking:</b>"
-msgstr "<b>W_aarschuw tijd:</b>"
-
-#: data/glade/drw-preferences.glade.h:6
-msgid "<b>_Work interval:</b>"
-msgstr "<b>_Werk interval:</b>"
-
-#: data/glade/drw-preferences.glade.h:7
-#, fuzzy
-msgid ""
-"<span size=\"small\">Duration of the break when typing is disallowed.</span>"
-msgstr ""
-"<span size=\"small\">Tijdsduur van de pauze tijdens dewelke typen niet "
-"mogelijk is.\n"
-"</span>"
-
-#: data/glade/drw-preferences.glade.h:8
-msgid ""
-"<span size=\"small\">Duration of warning before starting a break.\n"
-"</span>"
-msgstr ""
-"<span size=\"small\">Tijdsduur van de waarschuwing voorafgaande aan een "
-"pauze.\n"
-"</span>"
-
-#: data/glade/drw-preferences.glade.h:10
-msgid ""
-"<span size=\"small\">Duration of work before forcing a break.\n"
-"</span>"
-msgstr ""
-"<span size=\"small\">Tijdsduur om te werken vooraleer te pauzeren.\n"
-"</span>"
-
-#: data/glade/drw-preferences.glade.h:12
-msgid "Allow unlocking, using the phrase:"
-msgstr ""
-
-#: data/glade/drw-preferences.glade.h:13
-msgid "Display warning window "
-msgstr "Toon waarschuw venster "
-
-#: data/glade/drw-preferences.glade.h:14
-msgid "DrWright Preferences"
-msgstr "DrWright Instellingen"
-
-#: data/glade/drw-preferences.glade.h:15
-msgid "minutes"
-msgstr "minuten"
 
 #: src/main.c:128
 msgid "DrWright is already running."
@@ -91,14 +24,18 @@ msgid ""
 "to have a notification area on your panel. You can add it by right-clicking "
 "on your panel and choose 'Add to panel -> Utilities -> Notification area'."
 msgstr ""
+"DrWright gebruikt het mededelingengebied om informatie weer te geven. U "
+"heeftblijkbaar het mededelingengebied niet ingeschakeld op uw paneel. U kan "
+"dittoevoegen door met de rechtermuisknop te klikken op het paneel "
+"enToevoegen aan paneel -> Gereedschap -> Mededelingengebied te kiezen."
 
 #: src/drwright.c:130
 msgid "/_Enabled"
-msgstr "/In_geschakeld"
+msgstr "/_Ingeschakeld"
 
 #: src/drwright.c:132
 msgid "/_Preferences"
-msgstr "/_Instellingen"
+msgstr "/_Voorkeuren"
 
 #: src/drwright.c:133
 msgid "/_About"
@@ -106,7 +43,7 @@ msgstr "/I_nfo"
 
 #: src/drwright.c:135
 msgid "/_Remove Icon"
-msgstr ""
+msgstr "/Pictogram ver_wijderen"
 
 #: src/drwright.c:180
 msgid "Break coming up!"
@@ -118,24 +55,23 @@ msgstr "Pauze!"
 
 #: src/drwright.c:523
 msgid "Disabled"
-msgstr ""
+msgstr "Uitgeschakeld"
 
 #: src/drwright.c:532
 #, c-format
 msgid "%d minutes until the next break"
 msgstr "%d minuten tot de volgende pauze"
 
-# ik schrijf '1' als cijfer omdat 'éÂén' blijkbaar niet werkt
+# ik schrijf '1' als cijfer omdat 'Ã©Ã‚Ã©n' blijkbaar niet werkt
 #: src/drwright.c:534
 msgid "One minute until the next break"
-msgstr "Nog 1 minuut tot de volgende pauze"
+msgstr "Nog Ã©Ã©n minuut tot de volgende pauze"
 
 #: src/drwright.c:633
 msgid "Quit DrWright?"
 msgstr "DrWright Afsluiten?"
 
 #: src/drwright.c:634
-#, fuzzy
 msgid "Don't forget to take regular breaks."
 msgstr "Vergeet niet om regelmatig te pauzeren."
 
@@ -143,27 +79,89 @@ msgstr "Vergeet niet om regelmatig te pauzeren."
 msgid "About DrWright"
 msgstr "Over DrWright"
 
-#: src/drwright.c:711
+#: src/drwright.c:712
 msgid "A computer break reminder."
 msgstr "Een programma dat je eraan herinnert regelmatig een pauze te nemen."
 
-#: src/drwright.c:712
-#, fuzzy
-msgid "Written by Richard Hult &lt;rhult@imendo.com&gt;"
-msgstr "Geschreven door Richard Hult &lt;richard@imendo.com&gt;"
+#: src/drwright.c:714
+msgid "Written by Richard Hult &lt;rhult@codefactory.se&gt;"
+msgstr "Geschreven door Richard Hult &lt;rhult@codefactory.se&gt;"
 
-#: src/drwright.c:713
+#: src/drwright.c:715
 msgid "Eye candy added by Anders Carlsson"
 msgstr "\"Eye candy\" toegevoegd door Anders Carlsson"
 
-#: src/drwright.c:826
-#, fuzzy
+#: src/drwright.c:828
 msgid "Break reminder"
 msgstr "Een programma dat je eraan herinnert regelmatig een pauze te nemen."
 
+#: src/drw-preferences.glade.h:1
+msgid "*"
+msgstr "*"
+
+#: src/drw-preferences.glade.h:2
+msgid "<b>W_arning time:</b>"
+msgstr "<b>W_aarschuwingstijd:</b>"
+
+#: src/drw-preferences.glade.h:3
+msgid "<b>Warning _method:</b>"
+msgstr "<b>Waarschuwings_methode:</b>"
+
+#: src/drw-preferences.glade.h:4
+msgid "<b>_Break interval:</b>"
+msgstr "<b>_Pauze-interval:</b>"
+
+#: src/drw-preferences.glade.h:5
+msgid "<b>_Unlocking:</b>"
+msgstr "<b>Ontgrendelen:</b>"
+
+#: src/drw-preferences.glade.h:6
+msgid "<b>_Work interval:</b>"
+msgstr "<b>_Werk-interval:</b>"
+
+#: src/drw-preferences.glade.h:7
+msgid ""
+"<span size=\"small\">Duration of the break when typing is disallowed.</span>"
+msgstr ""
+"<span size=\"small\">Tijdsduur van de pauze wanneer typen niet mogelijk is.\n"
+"</span>"
+
+#: src/drw-preferences.glade.h:8
+msgid ""
+"<span size=\"small\">Duration of warning before starting a break.\n"
+"</span>"
+msgstr ""
+"<span size=\"small\">Tijdsduur van de waarschuwing voorafgaande aan een "
+"pauze.\n"
+"</span>"
+
+#: src/drw-preferences.glade.h:10
+msgid ""
+"<span size=\"small\">Duration of work before forcing a break.\n"
+"</span>"
+msgstr ""
+"<span size=\"small\">Tijdsduur om te werken vooraleer te pauzeren.\n"
+"</span>"
+
+#: src/drw-preferences.glade.h:12
+msgid "Allow unlocking, using the phrase:"
+msgstr "Ontgrendeling toestaan, gebruik makend van de zin:"
+
+#: src/drw-preferences.glade.h:13
+msgid "Display warning window "
+msgstr "Waarschuwingsvenster tonen"
+
+#: src/drw-preferences.glade.h:14
+msgid "DrWright Preferences"
+msgstr "DrWright Voorkeuren"
+
+#: src/drw-preferences.glade.h:15
+msgid "minutes"
+msgstr "minuten"
+
 #: src/drw-break-window.c:240
 msgid "Unlock"
-msgstr ""
+msgstr "Ontgrendelen"
 
 #: src/drw-break-window.c:278
 msgid "Take a break!"
@@ -171,7 +169,7 @@ msgstr "Neem een pauze!"
 
 #: src/drw-preferences.c:363
 msgid "Advanced"
-msgstr ""
+msgstr "Geavanceerd"
 
 #~ msgid "DrWright"
 #~ msgstr "DrWright"
