Resolve mnemonic collision.
2003-06-03  Richard Hult  <rhult@codefactory.se>

	* sv.po: Resolve mnemonic collision.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-03  Richard Hult  <rhult@codefactory.se>
+
+	* sv.po: Resolve mnemonic collision.
+
 2003-05-30  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Dutch translation updated by Luc Roobrouck.
