--- a/po/sv.po
+++ b/po/sv.po
@@ -58,7 +58,7 @@ msgstr "Valfri fras att använda för att skjuta upp en paus"
 
 #: data/glade/drw-preferences.glade.h:11
 msgid "_Allow postponing of breaks"
-msgstr "_Tillåt uppskjutning av paus"
+msgstr "Tillåt _uppskjutning av paus"
 
 #: data/glade/drw-preferences.glade.h:12
 msgid "_Break interval lasts"
