--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-08  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
+
+	* nl.po: Dutch translation updated by Luc Roobrouck.
+
 2003-06-03  Richard Hult  <rhult@codefactory.se>
 
 	* sv.po: Resolve mnemonic collision.
