Update contact information.
2003-06-13  Richard Hult  <richard@imendio.com>

	* *: Update contact information.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-13  Richard Hult  <richard@imendio.com>
+
+	* *: Update contact information.
+
 2003-05-27  Richard Hult  <rhult@codefactory.se>
 
 	* src/drwright.c (popup_break_cb): Add "take a break" feature.
