Update Czech translation

--- a/po/cs.po
+++ b/po/cs.po
@@ -6,8 +6,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: drwright VERSION\n"
-"POT-Creation-Date: 2003-05-29 12:01+0200\n"
-"PO-Revision-Date: 2003-05-29 14:51+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-06-14 12:12+0200\n"
+"PO-Revision-Date: 2003-06-14 20:13+0200\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -142,8 +143,8 @@ msgid "A computer break reminder."
 msgstr "Připomínač přestávek od počítače."
 
 #: src/drwright.c:662
-msgid "Written by Richard Hult &lt;rhult@codefactory.se&gt;"
-msgstr "Napsal Richard Hult &lt;rhult@codefactory.se&gt;"
+msgid "Written by Richard Hult &lt;richard@imendio.com&gt;"
+msgstr "Napsal Richard Hult &lt;richard@imendio.com&gt;"
 
 #: src/drwright.c:663
 msgid "Eye candy added by Anders Carlsson"
