Dutch translation updated by Luc Roobrouck.
2003-06-14  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>

	* nl.po: Dutch translation updated by Luc Roobrouck.

--- a/po/nl.po
+++ b/po/nl.po
@@ -6,7 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: DrWright 0.13\n"
-"POT-Creation-Date: 2003-06-06 03:50+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-06-14 12:12+0200\n"
 "PO-Revision-Date: 2003-05-07 18:08+0100\n"
 "Last-Translator: Luc Roobrouck <luc.roobrouck(at)pandora.be>\n"
 "Language-Team: Dutch <nl@li.org>\n"
@@ -143,8 +144,8 @@ msgid "A computer break reminder."
 msgstr "Een programma dat je eraan herinnert regelmatig een pauze te nemen."
 
 #: src/drwright.c:662
-msgid "Written by Richard Hult &lt;rhult@codefactory.se&gt;"
-msgstr "Geschreven door Richard Hult &lt;rhult@codefactory.se&gt;"
+msgid "Written by Richard Hult &lt;richard@imendio.com&gt;"
+msgstr "Geschreven door Richard Hult &lt;richard@imendio.com&gt;"
 
 #: src/drwright.c:663
 msgid "Eye candy added by Anders Carlsson"
